package examberry.model;

public enum Status {
    BOOKED, ATTENDED, CANCELLED
}