package examberry.model;

public enum Subject {
    ENGLISH, MATHS, VERBAL_REASONING, NON_VERBAL_REASONING
}