package examberry.model;

public enum TimeSlot {
    MORNING, AFTERNOON
}